--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 	<title>首页</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/public.css">
+	<style type="text/css">
+	ul{}
+	ul li{float:left;margin:10px;}
+	</style>
 </head>
 <body>
-首页
+	<ul>
+		<li><a href="index.html">首页</a></li>
+		<li><a href="news.html">资讯</a></li>
+		<li><a href="about.html">关于</a></li>
+	</ul>
 </body>
 </html>
