--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,12 @@
 	<style type="text/css">
 	ul{}
 	ul li{float:left;margin:10px;}
+	.active{color:red;}
 	</style>
 </head>
 <body>
 	<ul>
-		<li><a href="index.html">首页</a></li>
+		<li><a href="index.html" class="active">首页</a></li>
 		<li><a href="news.html">资讯</a></li>
 		<li><a href="about.html">关于</a></li>
 	</ul>
