--- a/html/about.html
+++ b/html/about.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<title>关于</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/public.css">
+	<style type="text/css">
+	ul{}
+	ul li{float:left;margin:10px;}
+	.active{color:red;}
+	</style>
 </head>
 <body>
-关于
+	<ul>
+		<li><a href="index.html">首页</a></li>
+		<li><a href="news.html">新闻</a></li>
+		<li><a href="about.html" class="active">关于</a></li>
+	</ul>
 </body>
 </html>
