--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 <body>
 	<ul>
 		<li><a href="index.html" class="active">首页</a></li>
-		<li><a href="news.html">资讯</a></li>
+		<li><a href="news.html">新闻</a></li>
 		<li><a href="about.html">关于</a></li>
 	</ul>
 </body>
